[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/GUI.gd" type="Script" id=1]
[ext_resource path="res://Textures/Feltpen.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_color = Color( 0.858824, 0.858824, 0.858824, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="PopupDialog" type="PopupDialog" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.844
margin_top = -190.022
margin_right = 267.156
margin_bottom = 14.9777
rect_rotation = 0.209575
rect_scale = Vector2( 1.31853, 0.879122 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="PopupDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.35669
margin_top = -4.86353
margin_right = -4.35669
margin_bottom = -4.86353
rect_rotation = 0.0204152
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.964706, 0.905882, 0.0196078, 1 )
text = "Game over
"
align = 1
valign = 2

[node name="Playagain" type="Button" parent="PopupDialog"]
margin_left = 42.02
margin_top = 121.15
margin_right = 200.02
margin_bottom = 194.15
rect_rotation = -0.299732
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.968627, 0.964706, 0.0352941, 1 )
text = "Again"

[node name="Quit" type="Button" parent="PopupDialog"]
margin_left = 251.637
margin_top = 122.234
margin_right = 409.637
margin_bottom = 195.234
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.94902, 0.905882, 0.027451, 1 )
text = "Quit"

[node name="PopupDialogWin" type="PopupDialog" parent="."]
visible = true
margin_left = 491.181
margin_top = 420.819
margin_right = 1053.18
margin_bottom = 605.819
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="PopupDialogWin"]
margin_left = 3.81885
margin_top = 6.18079
margin_right = 562.819
margin_bottom = 180.181
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.290196, 0.929412, 0.0588235, 1 )
text = "Gewonnen
"
align = 1
valign = 1
[connection signal="pressed" from="PopupDialog/Playagain" to="." method="_on_Playagain_pressed"]
[connection signal="pressed" from="PopupDialog/Quit" to="." method="_on_Quit_pressed"]
